--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Top Movies</string>
     <string name="movie_poster">Movie Poster</string>
+    <string name="save_to_favorites">Save to Favorites</string>
+    <string name="top_movies">Top Movies</string>
+    <string name="my_movies_top">My Movies Top</string>
 </resources>
